integration_tests/codegen_fail/fail/union/derive_enum_field.stderr
error[E0277]: the trait bound `Test: juniper::types::marker::GraphQLObjectType<juniper::value::scalar::DefaultScalarValue>` is not satisfied
 --> $DIR/derive_enum_field.rs:7:10
  |
7 | #[derive(juniper::GraphQLUnion)]
  |          ^^^^^^^^^^^^^^^^^^^^^ the trait `juniper::types::marker::GraphQLObjectType<juniper::value::scalar::DefaultScalarValue>` is not implemented for `Test`
  |
  = note: required by `juniper::types::marker::GraphQLObjectType::mark`
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Test: juniper::types::marker::GraphQLObjectType<__S>` is not satisfied
 --> $DIR/derive_enum_field.rs:7:10
  |
7 | #[derive(juniper::GraphQLUnion)]
  |          ^^^^^^^^^^^^^^^^^^^^^ the trait `juniper::types::marker::GraphQLObjectType<__S>` is not implemented for `Test`
  |
  = note: required by `juniper::types::marker::GraphQLObjectType::mark`
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
